WIP: Milestone 3: Acceptor Publishes NewOrderSingleCommand to Aeron